# lifesite

./: .gitignore  ReadMe.md  main.py  pyproject.toml  reminders.txt
src/backend/: main.py  site.db
src/backend/Tests/: routetest.py  security_test.py  servicetest.py
src/backend/db/: database.py  models.py
src/backend/db/schemas/: events.py  login.py
src/backend/routes/: auth.py  dashboard.py  events.py  home.py  login.py
src/backend/security_helpers/: crypto_helper.py
src/backend/services/: events.py  login.py  weather.py
src/frontend/: package-lock.json  types.ts
src/frontend/src/: App.tsx  api.ts
src/frontend/src/hooks/: useAuth.tsx
src/frontend/src/pages/: CreateUser.css  CreateUser.tsx  Dashboard.css  Dashboard.tsx  Home.css  Home.tsx  Login.css  Login.tsx
src/frontend/src/styles/: global.css
